<resources>
    <string name="app_name">Proyecto 2 App de Frutas</string>
    <string name="et_nombre">¿Cómo te llamas?</string>
    <string name="boton">Jugar</string>
    <string name="botonIntrucciones">Tutorial</string>

    <string name="et_vidas">Manzanas: </string>
    <string name="jugador_nombre">Jugador:</string>
    <string name="total_score">Score: 0</string>
    <string name="boton_sumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
    <string name="title_activity_instrucciones">InstruccionesActivity</string>
    <string name="tab_text_1">Rojo</string>
    <string name="tab_text_2">Amarillo</string>
    <string name="tab_text_3">Azul</string>
    <string name="tab_text_4">Verde</string>
    <string name="tab_text_5">Morado</string>
    <string name="tab_text_6">Aqua</string>
    <string name="tab_text_7">Gris</string>
    <string name="tab_text_8">Celeste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boton_escuchar" />
    <string name="modo_tradicional">Modo Tradicional</string>
    <string name="modo_voz">Modo tiempo</string>
    <string name="modo_dibujo">Tabla general</string>
    <string name="settings">Configuración</string>
    <string name="boton_borrar">Borrar</string>
    <string name="btn_comprobar">Comrpobar</string>
    <string name="respuesta" />
    <string name="_00_00_00">00:00:00</string>
    <string name="tiempo_restante">Segundos:</string>
    <string name="proyecto_2_app_frutas">Proyecto 2 - App Frutas</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menu</string>

</resources>