<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo03"
    tools:context="com.android.proyecto_frutas.tiempo.MainActivity_Tiempo_Nivel1">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_nombre"
        android:layout_below="@+id/textView_nombre"
        android:text="@string/total_score"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_Manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView_nombre"
        android:layout_alignTop="@+id/imageView_vidas"
        android:text="@string/et_vidas"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_00_00_00"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView_tiempo_restante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_timer"
        android:layout_centerHorizontal="true"
        android:text="@string/tiempo_restante"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_score"
        android:layout_marginStart="103dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageView_NumUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignBottom="@+id/imageView_NumUno"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-2dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/adicion" />


    <ImageView
        android:id="@+id/imageView_NumDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/imageView_NumUno"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="195dp"
        android:layout_toStartOf="@+id/imageView_NumDos"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button2"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/editText_resultado"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@+id/editText_resultado"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/boton_sumar"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="67dp"
        android:text="Regresar" />


</RelativeLayout>
